prevent page from jumping when header becomes sticky

--- a/apps/artist/stylesheets/header.styl
+++ b/apps/artist/stylesheets/header.styl
@@ -64,6 +64,9 @@
 .artist-sticky-name
   avant-garde-size('body')
 
+.artist-sticky-header
+  height 97px
+
 .artist-sticky-header-fixed
   .artist-sticky-header-container
     padding 0 15px
